2025-04-26
1. MagicLib 添加 Velocity 相关内容